--- a/React/nft-market/package.json
+++ b/React/nft-market/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ytpl",
+  "name": "nft-market",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.6"
+    "react-scripts": "5.0.1",
+    "style-components": "^0.1.0",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "web-vitals": "^3.1.1"
   }
 }
